# HPC_labs

./: README.md
dataVisualization/: data.py  main_matrix_mult.py  main_pi_approx.py  matrixMultiplication.ipynb  plot.py
dataVisualization/logs/matrix_mult/: treatedInfo.txt
dataVisualization/logs/pi_approx/: formattedDataToAnalyze.txt
dataVisualization/old/: matrixMultiplication.ipynb
matrixMultiplication/: CMakeLists.txt  automation.sh  main.c
matrixMultiplication/Pthreads_concepts/: phtreads_ex.c  phtreads_ex.h
matrixMultiplication/functions/: matrixMultiplication.c  matrixMultiplication.h
needles-PiApproximation/: CMakeLists.txt
openMp/: CMakeLists.txt  main.c  test.sh
openMp/matrixMultiplication/: matrixMultiplication.c  matrixMultiplication.h
openMp/pi_approx/dartboard/: dartboard.c  dartboard.h
openMp/pi_approx/needles/: needles.c  needles.h
pi-approximation/: CMakeLists.txt  main.c  test_cases.sh
pi-approximation/dartboardAlgo/: dartboard.c  dartboard.h
pi-approximation/needle/: needle.c  needle.h
